Mon Oct 31 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.13

	* pokernetwork/protocol.py (UGAMEProtocol.setPingDelay): forgot underscore

Fri Oct 28 2005  Johan Euphrosine  <johan@mekensleep.com>

	* pokerclient2d/network.c: 
	* pokerclient2d/main.c: 
	added handling of GIOCondition G_IO_ERR: call gtk_main_quit
	REALLY fix performance issue (CPU 100%), when interface server disconnect due to a crash
	
Thu Oct 27 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerclient.py (PokerClientFactory.isAlwaysHandled): some packets are never
	  delayed

	* pokernetwork/pokerserver.py (PokerTable.allReadyToPlay): log players who are not ready
	(PokerTable.disconnectPlayer): a disconnected player is always ready to play

	* pokerui/pokerrenderer.py (PokerRenderer._handleConnection): PACKET_POKER_SIT no longer
	  imposes a delay

	* pokernetwork/protocol.py (UGAMEProtocol._processQueues): call canHandlePacket to figure
	  out if it's ok to call the handler on each packet

	* pokernetwork/pokerclient.py (PokerClientProtocol.{get,set}PlayerDelay): per player user 
	  delays

	* pokernetwork/pokerclient.py (PACKET_POKER_SIT): minimum delay from settings/delay/@sit
	
Wed Oct 26 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerserver.py (PokerAvatar.handlePacketLogic): limit traces of ping packets

Wed Oct 26 2005  Nicolas Albert  <nicolas_albert_85@yahoo.fr>

	* pokerclient2d/data/interface/interface.glade:
	add to yesno_window and message_window, head_hbox with 3 subwidgets *_msg_head_left,*_msg_head_middle,*_msg_head_right for don't strech the windows's heads

Mon Oct 24 2005  Johan Euphrosine  <johan@mekensleep.com>

	* Release 1.0.12

	* pokerclient2d/main.c: 
	* pokerclient2d/network.c: 
	added handling of GIOCondition G_IO_HUP: call gtk_main_quit
	fix performance issue (CPU 100%), when interface server disconnect due to a crash

Mon Oct 24 2005  Loic Dachary  <loic@gnu.org>

	* database/schema.sql.in: define money generator plugins to load
