@@ -14,7 +14,7 @@
   <table name="Four" count="4"/>
   <table name="Antigua" count="4"/>
   <table name="Cairo" count="4"/>
-  <table name="Mont" count="4"/>
+  <table name="Mont" count="1"/>
   <table name="Nancy" count="4"/>
   <table name="Corail" count="4"/>
   <table name="Legend" count="4"/>
