@@ -1,6 +1,12 @@
-Mon Oct 31 2005  Loic Dachary  <loic@gnu.org>
+Wed Nov 02 2005  Loic Dachary  <loic@gnu.org>
 
 	* Release 1.0.13
+
+	* pokerui/pokeranimation.py (PokerAnimationPlayer.setPlayerDelay): set the
+	  delay for the next incoming packet in order to ensure that the animation
+	  has enough time to finish before another one comes in the way
+
+Mon Oct 31 2005  Loic Dachary  <loic@gnu.org>
 
 	* pokernetwork/protocol.py (UGAMEProtocol.setPingDelay): forgot underscore
 
